spacing fixed

--- a/style.css
+++ b/style.css
@@ -277,8 +277,12 @@ letter-spacing: 3px;
 color: #2D83EE;
 text-transform: uppercase;
 opacity: 1;
-margin-top: 20%;
+margin-top: 35%;
 margin-left: 56px;
+}
+
+.whywe{
+    margin-top: 60px;
 }
 
 #WHY-ARE-WE-HERE p{
@@ -292,7 +296,10 @@ margin-left: 56px;
 }
 #boxs{
     margin-top: 30px;
+    float: right;
 }
+
+
 
 #boxs h5{
     text-align: center;
@@ -324,6 +331,7 @@ margin-top: 30px;
     float: left;
     height: 300px;
     padding: 30px;
+    
     background-color: #28293E !important;
     
     
@@ -369,6 +377,7 @@ margin-top: 30px;
 }
 .hashimg{
     margin-left: 10px;
+
 }
 
 .drp{
@@ -433,7 +442,9 @@ margin-top: 30px;
   }
 
   .MENTIONS{
-     margin-top: 30px;
+     margin-top: 60px;
+     padding: 20px;
+
   }
 
   #fewrapper{
@@ -566,6 +577,7 @@ margin-top: 30px;
     opacity: 1;
 
   }
+
   
 
   .faqr1{
@@ -575,6 +587,7 @@ border: 1px solid #2D83EE;
 border-radius: 6px 6px 0px 0px;
 opacity: 1;
 margin-top: 30px;
+
   }
 
   .faqr1 h5{
@@ -733,6 +746,10 @@ opacity: 1;
         font-size: medium;
     }
 
+    .hash{
+        padding: 40px;
+    }
+
     .imp{
         margin: 20px;
         width: 496px;
@@ -851,6 +868,7 @@ opacity: 1;
 letter-spacing: 0px;
 color: #2D83EE;
 opacity: 1;
+
 
 }
 
